# lccp-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: api.md
examples/: example_app.rs
examples/example-app/: README.md  output.txt
examples/example-app/cwd/: cli-config.toml  example-app.json
examples/example-app/home/.example-app/: config.toml
examples/example-app/install-root/etc/: example-app.toml
examples/example-app/system/: example-app.json  example-app.toml
spec/upstream/: README.md
spec/upstream/1e66ffa497fca2f2f58d0da35049bac015922d60/: lccp-specification.md
spec/upstream/6b6f614b3e6abcacda47da240bbc9c339425980b/: lccp-specification.md
src/: lib.rs
tests/: conformance.rs
